force-app/main/default/objects/Other_Charges_Included__c/Other_Charges_Included__c.object-meta.xml
<CustomObject>
    <label>Other Charges Included</label>
    <nameField>
        <displayFormat>OCI-{00000}</displayFormat>
        <label>Other Charges Included Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Charges Included</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>