force-app/main/default/objects/Other_Charges_Included__c/fields/Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount__c</fullName>
    <label>Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>