force-app/main/default/objects/Other_Charges_Included__c/fields/Charge_Amount_Including_GST__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount_Including_GST__c</fullName>
    <formula>Charge_Amount__c + (GST_Percentage__c*Charge_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Amount Including GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>