force-app/main/default/objects/Other_Charges_Included__c/fields/GST_Charges__c.field-meta.xml
<CustomField>
    <fullName>GST_Charges__c</fullName>
    <formula>Charge_Amount__c * GST_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>