force-app/main/default/objects/Other_Charges_Included__c/fields/GST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GST_Percentage__c</fullName>
    <label>GST Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>