force-app/main/default/objects/Other_Charges_Included__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>Other Charges Included</relationshipLabel>
    <relationshipName>Other_Charges_Included</relationshipName>
    <type>Lookup</type>
</CustomField>